# trash-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: lib.rs  linux.rs  macos.rs  tests.rs  windows.rs
