[package]
name = "trash"
version = "0.1.0"
authors = ["Warren Galyen"]
license = "MIT"
license-file = "LICENSE"
readme = "Readme.md"
description = "A Rust library for moving files to the Recycle Bin"
keywords = ["remove", "trash", "rubbish", "recycle", "bin"]
repository = "https://github.com/warrengalyen/trash-rs"
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.0", features = ["shellapi", "winerror"] } 