[package]
name = "trash"
version = "1.0.1"
authors = ["Warren Galyen"]
license = "MIT"
readme = "Readme.md"
description = "A library for moving files and folders to the Recycle Bin"
keywords = ["remove", "trash", "rubbish", "recycle", "bin"]
repository = "https://github.com/warrengalyen/trash-rs"
edition = "2018"

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.0", features = ["shellapi", "winerror"] } 